--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "dompurify": "^3.0.11",
+    "handlebars": "^4.7.8",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite-plugin-webpackchunkname": "^1.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -24,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "sass": "^1.72.0",
-    "vite": "^5.2.0"
+    "vite": "^5.4.3",
+    "vite-plugin-webpackchunkname": "^1.0.3"
   }
 }
